Remove GET /models, restructure config
